BUG: Book now button not showing for customers

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -27,22 +27,6 @@ p a i {
   margin-right: auto;
 }
 
-.title-text {
-  /* margin-top: 20px;
-  text-align: center;
-  font-size: 4em;
-  font-weight: 700; */
-}
-
-.title-text-container {
-  /* display: inline-block;
-  background-color: #040404;
-  /* margin-left: auto;
-  margin-right: auto; */
-  /* text-align: center; */
-  /* opacity: 0.8; */
-  /* width: 30vw; */
-}
 */ .details-border {
   border-left: 2px solid #040404;
   border-bottom: 2px solid #040404;
@@ -71,7 +55,7 @@ p a i {
 
 .btn-signup:hover {
   color: #fff;
-  background-color: #4e4feb;
+  background-color: #040404;
 }
 
 .btn-signout {
@@ -98,7 +82,7 @@ p a i {
 }
 
 .btn-book:hover {
-  background-color: #4e4feb;
+  background-color: #040404;
 }
 
 .details-border {
